@@ -2,7 +2,11 @@ SET(AGENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
 
 ADD_SUBDIRECTORY( net )
 
+#INCLUDE_DIRECTORIES(./)
+
 ADD_EXECUTABLE(mapper mapper.cpp main.cpp)
+
+TARGET_LINK_LIBRARIES(mapper net)
 
 SET( CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/bin/")
 
