@@ -1,5 +1,6 @@
-ADD_LIBRARY( socketstream STATIC
-  Socket.h Socket.cpp
-  SocketStream.hpp ClassException.hpp
-  Singleton.hpp
-  )
+EXEC_PROGRAM("find ${AGENT_SOURCE_DIR}/net -name *\\.cpp -or -name *\\.h" OUTPUT_VARIABLE SRCS_ORIG )
+STRING(REPLACE "\n" ";" SRCS ${SRCS_ORIG})
+
+INCLUDE_DIRECTORIES(../)
+
+ADD_LIBRARY( net STATIC ${SRCS}  )
